fixed the zoom in problem on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 #root {
-  margin: 0 auto;
+  margin: 0 1rem;
   text-align: center;
 }
 
