--- a/src/components/styles/about.css
+++ b/src/components/styles/about.css
@@ -35,7 +35,7 @@ color: black;
 
 #about-me-banner {
     position: relative;
-    top: 4rem;
+    margin-top: 4rem;
     height: 20rem;
     width: 95%;
     object-fit: cover;
@@ -93,7 +93,7 @@ color: black;
     justify-content: center;
     align-items: center;
     position: relative;
-    top: 8rem;
+    margin-top: 8rem;
     margin-right: 3rem;
 }
 
@@ -209,5 +209,11 @@ margin: 0.5rem;
 
     #about-bottom-images {
         flex-direction: row;
+    }
+}
+
+@media screen and (max-width: 450px) {
+    #about-footer {
+        top: 35rem;
     }
 }
